# sbom-validator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASKS.md  pyproject.toml  sbom_validator.spec
.claude/: session-context.md  settings.local.json
.claude/agents/: architect.md  ci-ops.md  developer.md  documentation-writer.md  orchestrator.md  planner.md  release-manager.md  reviewer.md  security-reviewer.md  tester.md  token-analyst.md  workflow-analyst.md
.claude/commands/: collect-telemetry.md
.github/workflows/: ci.yml  release.yml  sbom-dry-run.yml
docs/: agent-briefing.md  agent-operating-model.md  code-review-notes.md  release-checklist-v0.1.0.md  repo-review-report.html  requirements.md  user-guide.md  workflow-evaluation-comparison.html  workflow-evaluation-report.html  workflow-evaluation-report_v0.2.0.html
docs/architecture/: ADR-001-format-detection.md  ADR-002-parser-abstraction.md  ADR-003-validation-pipeline.md  ADR-004-result-model.md  ADR-005-cli-design.md  ADR-006-structured-logging.md  ADR-007-report-contract.md  ADR-008-binary-distribution.md  ADR-009-spdx-multi-format.md  ADR-010-spdx3-jsonld-support.md  architecture-overview.md  component-diagram.drawio  normalized-model.md  parser-pipeline.drawio  validation-flow.drawio
docs/releases/: README.md  TASKS-template.md  TASKS-v0.2.1.md  TASKS-v0.2.2.md  TASKS-v0.3.0.md  TASKS-v0.4.0.md  TASKS-v0.5.0.md  TASKS-v0.6.0.md  token-delta-template.html  token-delta-v0.2.0_to_v0.2.1.html  token-delta-v0.2.1_to_v0.2.2.html  token-delta-v0.2.2_to_v0.3.0.html  token-delta-v0.3.0_to_v0.4.0-telemetry.html  token-delta-v0.3.0_to_v0.4.0.html  token-delta-v0.4.0_to_v0.5.0.html  token-report-template.html  token-report-v0.2.1.html  token-report-v0.2.2.html  token-report-v0.3.0.html  token-report-v0.4.0-telemetry.html  token-report-v0.4.0.html  token-report-v0.5.0.html  token-report-v0.6.0.html  workflow-report-v0.2.2.html  workflow-report-v0.3.0.html  workflow-report-v0.4.0-telemetry.html  workflow-report-v0.4.0.html  workflow-report-v0.5.0.html  workflow-report-v0.6.0.html
sandbox/user-demo/: mock-webapp-broken.cdx.xml  mock-webapp.cdx.json  mock-webapp.cdx.xml  spdx-invalid-conformance.spdx.json  spdx-invalid-schema.spdx.json  (+1 more)
scripts/: build_binary.sh  collect_telemetry.py  smoke-test-binary.sh
(+88 files in other folders)
