[tool.poetry]
name = "sbom-validator"
version = "0.4.0"
description = "CLI tool to validate SBOM files against schema and NTIA minimum elements"
authors = []
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sbom_validator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
click = ">=8.1"
jsonschema = ">=4.21"
pyyaml = ">=6.0"
spdx-tools = ">=0.8"
cyclonedx-bom = ">=4.0"
xmlschema = ">=3.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.9"
types-jsonschema = "*"
pyinstaller = {version = ">=6.0", python = ">=3.11,<3.15"}
pre-commit = ">=3.7"
types-pyyaml = "^6.0.12.20260408"

[tool.poetry.scripts]
sbom-validator = "sbom_validator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N817"]  # N817: ET alias for xml.etree.ElementTree is universal Python convention

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
